# tokyo-opendata-hackson

./: README.md
.github/workflows/: azure-static-web-apps-proud-moss-02aa5a600.yml  azure-static-web-apps-white-mud-0294c0600.yml
backend/: Cargo.toml  Dockerfile  batch.sh  output.json
backend/batch/: Q14.csv  Q5.csv  Q7.csv  config.json  dropbox2json.py  qcsv2json.py
backend/src/: main.rs
backend/tokyo-opendata-backend/: Cargo.toml  Dockerfile  output.json  test.json
backend/tokyo-opendata-backend/src/: main.rs
frontend/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
frontend/pages/: _app.tsx  index.tsx  questionnaire.tsx
frontend/pages/graph/: graphPage.tsx
frontend/src/: SymbolFlag.tsx  getQuestionList.ts  header.tsx  layout.tsx  theme.ts
frontend/styles/: Home.module.css  globals.css
