[package]
name = "tokyo-opendata-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
serde = {version = "1.0.143",features = ["derive"]}
serde_json = "1.0.83"
